# gnome-text-editor

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  NEWS  README.md  TODO.md  gnome-text-editor.doap  meson.build  meson_options.txt  org.gnome.TextEditor.Devel.json  org.gnome.TextEditor.json
.gitlab-ci/: test-msvc.bat
.gitlab/issue_templates/: bug.md
build-aux/meson/: postinstall.py
build-aux/win32/: build-mingw.sh  generate_ico.sh
data/: meson.build  org.gnome.TextEditor.appdata.xml.in  org.gnome.TextEditor.appdata.xml.in.in  org.gnome.TextEditor.desktop.in  org.gnome.TextEditor.desktop.in.in  org.gnome.TextEditor.gschema.xml  org.gnome.TextEditor.metainfo.xml.in.in  org.gnome.TextEditor.service.in
data/icons/: meson.build
data/macos/: Info.plist.in  meson.build  org.gnome.TextEditor.icns
data/styles/: Adwaita-dark.style-scheme.xml  Adwaita.style-scheme.xml  builder-dark.style-scheme.xml  builder-dark.xml  builder.style-scheme.xml  builder.xml  meson.build  peninsula.xml
help/: LINGUAS  meson.build
help/C/: basics-create-new-file.page  basics-draft-folder.page  basics-open-file.page  edit-search-and-replace.page  edit-undo-redo.page  index.page
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/kk/: kk.po
help/ko/: ko.po
help/ne/: ne.po
help/nl/: nl.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sr/: sr.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
lib/: editor-document-operation.c  editor-document-operation.h  editor-document-private.h  editor-document.c  editor-document.h  editor-draft.c  editor-draft.h  editor-progress.c  editor-progress.h  editor-settings-addin-private.h  editor-settings-addin.c  editor-settings.c  editor-settings.h  editor-source-buffer.c  editor-source-buffer.h  editor-source-file-loader.h  editor-source-file-saver.h  editor-source-location.c  editor-source-location.h  editor-source-view.c  editor-source-view.h  editor-types.h  editor-zoom.c  editor-zoom.h  editor.h  meson.build
lib/editorconfig/: editor-editorconfig-addin.c  editor-editorconfig-addin.h  editorconfig-glib.c  meson.build
lib/gsettings/: editor-gsettings-addin.c  editor-gsettings-addin.h  meson.build
po/: LINGUAS  POTFILES  POTFILES.in  ab.po  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  lt.po  lv.po  meson.build  nb.po  ne.po  nl.po  (+21 more)
src/: TextEditor.css  build-ident.h.in  cjhtextregion.c  cjhtextregionbtree.h  editor-animation.c  editor-animation.h  editor-application-actions.c  editor-application-private.h  editor-application.c  editor-application.h  editor-bin-private.h  editor-bin.c  editor-binding-group.c  editor-binding-group.h  editor-buffer-monitor-private.h  editor-buffer-monitor.c  editor-buffer-scheduler.c  editor-buffer-scheduler.h  editor-document-private.h  editor-document-statistics.c  editor-document-statistics.h  editor-document.c  editor-document.h  editor-encoding-dialog.c  editor-encoding-dialog.h  editor-encoding-dialog.ui  editor-encoding-model.c  editor-encoding-model.h  editor-encoding-row-private.h  editor-encoding-row.c  editor-encoding-row.ui  editor-file-manager.c  editor-file-manager.h  editor-filter-model-private.h  editor-filter-model.c  editor-focus-chain.c  editor-focus-chain.h  editor-frame-source.c  editor-frame-source.h  editor-fullscreen-box.c  (+144 more)
src/defaults/: editor-page-defaults-private.h  editor-page-defaults.c  meson.build
src/editorconfig/: editor-page-editorconfig-private.h  editor-page-editorconfig.c  meson.build
src/editorconfig/libeditorconfig/: meson.build
src/enchant/: editor-enchant-spell-language.c  editor-enchant-spell-provider.c  meson.build
src/modelines/: editor-modeline-settings-provider-private.h  editor-modeline-settings-provider.c  meson.build  modeline-parser.c  modeline-parser.h
src/styles/: builder-dark.xml
subprojects/: .gitignore  gtk.wrap  gtksourceview.wrap  icu.wrap  libadwaita.wrap  libspelling.wrap
