pages = [
  'index.page',
  'basics-open-file.page',
  'basics-create-new-file.page',
  'basics-draft-folder.page',
  'edit-search-and-replace.page',
  'edit-undo-redo.page',
  'legal.xml',
]

media = [
  'media/search-recent.png',
  'media/org.gnome.TextEditor.svg',
]

gnome.yelp(meson.project_name(),
  sources: pages,
  media: media,
)
